tambahan kata + readme

--- a/mat-ultah.html
+++ b/mat-ultah.html
@@ -204,7 +204,8 @@
             messages: [
                 "Selamat bertambah level ya Rad... Sorry aku ga bisa hadir di setiap kisah anda, tapi aku harap kamu bisa menjadi pribadi yang lebih baik tiap tahunnya",
                 "Kamu adalah adik yang hebat, lucu dan pintar juga",
-                "Kuat-kuat terus ya Rad😁"
+                "Kuat-kuat terus ya Rad😁",
+                "dan Selamat mendengarkan lagunya hehe🎶"
             ]
         };
 
